# tizen-app-assist

./: README.md  app-assist.dox  make-docs.sh  make-project.sh
app-assist-efl/base/: .cproject  .project  project_def.prop
app-assist-efl/base/inc/: IWWindowController.h  WApp.h  WAppEventHandler.h  WContentViewController.h  WDebugBase.h  WDefine.h  WEvasObject.h  WGengridItem.h  WGenlistItem.h  WMenuPopupController.h  WNaviframeController.h  WPageSlideViewController.h  WPopupController.h  WServiceApp.h  WServiceAppEventHandler.h  WSignal.h  WSignalIdGenerator.h  WTimer.h  WViewController.h  WWidget.h  WWidgetInstance.h  WWidgetWindowController.h  WWindowController.h
app-assist-efl/base/res/: CMakeLists.txt
app-assist-efl/base/res/edje/: app-assist-efl.edc
app-assist-efl/base/src/: WApp.cpp  WAppEventHandler.cpp  WContentViewController.cpp  WContentViewControllerImpl.cpp  WEvasObject.cpp  WGenlistItem.cpp  WMenuPopupController.cpp  WMenuPopupControllerImpl.cpp  WNaviframeController.cpp  WPageSlideViewController.cpp  WPopupController.cpp  WServiceApp.cpp  WServiceAppEventHandler.cpp  WSignalIdGenerator.cpp  WTimer.cpp  WTimerImpl.cpp  WTimerImpl.h  WVersion.cpp  WViewController.cpp  WViewControllerImpl.cpp  WViewControllerImpl.h  WWidget.cpp  WWidgetImpl.h  WWidgetInstance.cpp  WWidgetInstanceImpl.h  WWidgetWindowController.cpp  WWindowController.cpp
app-assist-efl/mobile/src/: WGengridItem.cpp
docs/: assigned-people.md  developers-certificate-of-origin.md  governance.md  how-to-build-and-import-tizen-app-assist.md
samples/sample-app/: .cproject  .gitignore  .project  .tproject  com.samsung.sample-app.manifest  tizen-manifest.xml
samples/sample-app/res/: CMakeLists.txt
samples/sample-app/res/edje/: autoscroll.edc
samples/sample-app/res/po/: CMakeLists.txt  en.po  ko_KR.po
samples/sample-watch/: .cproject  .gitignore  .project  .tproject  project_def.prop  tizen-manifest.xml
samples/sample-widget/: .cproject  .gitignore  .project  tizen-manifest.xml
templates/project-template/: .cproject  .project  project_def.prop  tizen-manifest.xml
(+62 files in other folders)
